--- a/platformio.ini
+++ b/platformio.ini
@@ -3,8 +3,16 @@
 [env]
 monitor_speed = 115200
 framework = arduino
+board = unexpectedmaker_feathers2
+platform = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
+platform_packages =
+	framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.2
+	platformio/tool-esptoolpy @ https://github.com/tasmota/esptool/releases/download/v3.2.1/esptool-3.2.1.zip
+build_flags =
+	-D LED_BUILTIN=13
+	-D CORE_DEBUG_LEVEL=4
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D DEBUG_ESP_PORT=Serial
 
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
-framework = arduino
+[env:feathers2]
+board_upload.speed = 921600
