Add the UM ProS3

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,17 @@
 
 
 [env]
-monitor_speed = 115200
 framework = arduino
 
+[env:um_pros3]
+platform = espressif32
+board = um_pros3
+build_flags =
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+
+
 [env:esp32dev]
+monitor_speed = 115200
 platform = espressif32
 board = esp32dev
-framework = arduino
+
