Add the UM FeatherS3

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,17 @@ build_flags =
     -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 
 
+[env:um_feathers3]
+platform = espressif32
+board = um_feathers3
+build_flags =
+    -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+
 [env:esp32dev]
 monitor_speed = 115200
 platform = espressif32
 board = esp32dev
 
+[env:nanorp2040connect]
+platform = raspberrypi
+board = nanorp2040connect
